--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,6 +2,6 @@ sonar.projectKey=Python-Project
 sonar.projectName=Python-Project-NEW
 sonar.projectVersion=1.0
 #sonar.projectBaseDir=/home/kusheni/python-project/new1
-sonar.sources=/home/kusheni/python-project/new1
-sonar.python.coverage.reportpath=/home/kusheni/python-project/new1/coverage.xml
+sonar.sources=src/
+sonar.python.coverage.reportpath=$WORKSPACE/coverage.xml
 sonar.scm.enabled=True
