--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -5,3 +5,4 @@ sonar.projectVersion=1.0
 sonar.sources=src/
 sonar.python.coverage.reportpath=$WORKSPACE/coverage.xml
 sonar.scm.enabled=True
+sonar.flex.cobertura.reportpath=$WORKSPACE/coverage.xml
