--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,8 +1,7 @@
 sonar.projectKey=Python-Project
 sonar.projectName=Python-Project-NEW
 sonar.projectVersion=1.0
-#sonar.projectBaseDir=/home/kusheni/python-project/new1
-sonar.sources=src/
-sonar.python.coverage.reportpath=$WORKSPACE/coverage.xml
+sonar.sources=.
 sonar.scm.enabled=True
-sonar.flex.cobertura.reportpath=$WORKSPACE/coverage.xml
+sonar.python.coverage.reportPaths=./coverage.xml
+sonar.exclusions=test*.py,tests/*.py
